# Badminton-Rental-System

./: CMakeLists.txt  CMakeLists_simple.txt  LICENSE  README.md  fix_corruption.sh
src/: demo.cpp  main.cpp  main_simple.cpp
src/controllers/: auth_controller.cpp  auth_controller.h  booking_controller.cpp  booking_controller.h  court_controller.cpp  court_controller.h  notification_controller.cpp  notification_controller.h
src/models/: booking.cpp  booking.h  court.cpp  court.h  notification.cpp  notification.h  user.cpp  user.h
src/patterns/: observer.h  singleton.h
src/utils/: database_manager.cpp  database_manager.h  date_utils.cpp  date_utils.h  email_service.cpp  email_service.h
src/views/: booking_widget.cpp  booking_widget.h  court_management_widget.cpp  court_management_widget.h  login_window.cpp  login_window.h  main_window.cpp  main_window.h  statistics_widget.cpp  statistics_widget.h
test/: CMakeLists.txt
